--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,12 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
+    "i18next": "^21.8.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.17.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "simplebar-react": "^2.4.1",
