--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,17 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.41",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "i18next": "^21.8.10",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.17.2",
     "react-router-dom": "^6.3.0",
